--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 .logo{
-  background-image: url("Amazon_Resources/amazon_logo.png");
+  background-image: url("amazon_logo.png");
   background-size: cover; 
   height: 50px;
   width: 100%;
