--- a/style.css
+++ b/style.css
@@ -1,117 +1,178 @@
 *{
-  margin:0;
-  font-family: Arial;
-  border:border-box; 
-}
+    margin:0;
+    font-family: Arial;
+    border:border-box; 
+  }
+  
+  .top-navbar{
+    height:60px;
+    background-color: #0f1111;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .top-navbar-box{
+    display: flex;
+  }
+  /*Navigation Bar Box-1*/
+  .nav-logo{
+    height: 50px;
+    width: 100px;
+  }
+  
+  .logo{
+    background-image: url("Images/amazon_logo.png");
+    background-size: cover; 
+    height: 50px;
+    width: 100%;
+  }
+  
+  /*Navigation Bar Box-2*/
+  .nav-address{
+    margin-left: 2px;
+    /*height: 50px;
+    width: 100px;
+    border: box; */
+  }
+  .top-navbar-icon{
+    align-items:flex-end;
+  }
+  .border {
+    border:1px solid transparent;
+  }
+  .border:hover {
+    border:1px solid white;
+  }
+  
+  .first-text{
+    color:#cccccc;
+    font-size: 0.80rem;
+    margin-left: 5px;
+  }
+  .second-text{
+    font-size: 0.90rem;
+    font-weight: bold;
+    margin-left: 5px;
+  }
+  .top-navbar-box{
+    display: flex;
+    align-items: center;
+  }
+  
+  /*Navigation Bar Box-3*/
+  .nav-search{
+    display: flex;
+    justify-content: space-evenly;
+    width: 620px;
+    height: 40px;
+    border-radius: 4px;
+  }
+  .search-select{
+    background-color: #f3f3f3;
+    width: 60px;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: none;
+  
+  }
+  .search-input{
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+  }
+  .search-icon{
+    /*text-align: center;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    border: none;
+    width: 50px;
+    background-color: rgba(253, 165, 2, 0.993);
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: #0f1111;
+  }
+  
+  /*Navigation Bar Box-4*/
+  /*Navigation Bar Box-5*/
+  /*Navigation Bar Box-6*/
+  /*Navigation Bar Box-7*/
+  
+  .navbar-second-top{
+    height: 40px;
+    background-color: #525353;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .navbar-second-top-box1{
+    display: flex;
+  }
+  .navbar-second-top-box1>p{
+    padding-left: 5px;
+  }
+  .second-top-navbar-box2{
+    width: 80%;
+  } 
+  .second-top-navbar-box2>p{
+    display: inline;
+    margin-left: 15px;
+    font-size: 0.85rem;
+  }
 
-.navbar-top{
-  height:60px;
-  background-color: #0f1111;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
+  .panel-deals{
+    color: white;
+    align-items: right;
+    font-size: 0.85rem;
+  }
+  .hero-section{
+    background-image: url("/images/homePageBackground.jpg");
+    background-size: cover;
+    height: 400px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+  }
+  .hero-section-message{
+    display:flex;
+    background-color: white;
+    color: black;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    font-size: 0.85rem;
+    width: 98%;
+    margin-bottom: 2%;
+  }
+  .hero-section-message a {
+    color: #007185;
+    text-decoration: none;
+  }
+  .shop-section{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #dfdcdc;
+  }
+  .box{
+   /* border:1px solid black; */
+    width: 21%;
+    height: 300px;
+    margin-top: 20px;
+    padding: 10px 15px;
+    background-color: white;
 
-/*Navigation Bar Box-1*/
-.nav-logo{
-  height: 50px;
-  width: 100px;
-}
-
-.logo{
-  background-image: url("amazon_logo.png");
-  background-size: cover; 
-  height: 50px;
-  width: 100%;
-}
-
-/*Navigation Bar Box-2*/
-.nav-address{
-  margin-left: 2px;
-  /*height: 50px;
-  width: 100px;
-  border: box; */
-}
-
-.border {
-  border:1px solid transparent;
-}
-.border:hover {
-  border:1px solid white;
-}
-
-.add-first{
-  color:#cccccc;
-  font-size: 0.85rem;
-  margin-left: 15px;
-}
-.add-second{
-  font-size: 1rem;
-  margin-left: 3px;
-}
-.add-icon{
-  display: flex;
-  align-items: center;
-}
-
-/*Navigation Bar Box-3*/
-.nav-search{
-  display: flex;
-  justify-content: space-evenly;
-  width: 620px;
-  height: 40px;
-  border-radius: 4px;
-}
-.search-select{
-  background-color: #f3f3f3;
-  width: 60px;
-  text-align: center;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  border: none;
-
-}
-.search-input{
-  width: 100%;
-  font-size: 1rem;
-  border: none;
-}
-.search-icon{
-  /*text-align: center;*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.2rem;
-  border: none;
-  width: 50px;
-  background-color: rgba(253, 165, 2, 0.993);
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  color: #0f1111;
-}
-
-/*Navigation Bar Box-4*/
-/*Navigation Bar Box-5*/
-/*Navigation Bar Box-6*/
-/*Navigation Bar Box-7*/
-
-.navbar-second-top{
-  height: 40px;
-  background-color: #525353;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: left;
-}
-.navbar-second-top-box1{
-  color: white;
-}
-.navbar-second-top-box2{
-  color: white;
-  display: flex;
-  justify-content: space-evenly;
-}
-a:link{
-  text-decoration: none;
-}
+  }
+  .see-more{
+    color: #007185;
+    font-size: 0.85rem;
+  }
+  .box-image{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 250px;
+    
+  }
